Sun May 30 14:18:40 1999  Jeffrey A Law  (law@cygnus.com)

	* function.h (cleanup_label, frame_offset): Declare.
	(tail_recursion_label, tail_recursion_reentry): Likewise.
	(arg_pointer_save_area, rtl_expr_chain): Likewise.
	* stmt.c (cleanup_label, frame_offset): Delete extern declarations.
	(tail_recursion_label, tail_recursion_reentry): Likewise.
	(arg_pointer_save_area, rtl_expr_chain): Likewise.

Fri May 28 03:47:03 1999  Eric Raskin (ehr@listworks.com)

	* i386/t-dgux (EXTRA_PARTS): Add crti.o.
	(crti.o): Add build rule and dependencies.

Fri May 28 03:07:10 1999  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* rs6000/sysv4.h (CC1_SPEC): Add support for -profile
	(LIB_LINUX_SPEC): Likewise.
	(LIB_LINUX_SPEC): Add support for -pthread
	(CPP_OS_LINUX_SPEC): Likewise.
	(CPP_SYSV_SPEC): Avoid redefinitions if both -fpic and -fPIC are
	specified

	* rs6000.c (output_mi_thunk): Enable full support again.

Thu May 27 13:04:52 1999  H.J. Lu  (hjl@gnu.org)

	* i386.c (output_fp_cc0_set): Don't check the JUMP_INSN code for
	conditional move.
	(notice_update_cc, output_float_compare): Enable TARGET_CMOVE support.
	(output_float_compare, output_fp_cc0_set): Fix the FLOAT comparison
	for IEEE math and CC_FCOMI.
	(put_jump_code): No IEEE if CC_FCOMI is set.

1999-05-27  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* fold-const.c (fold_truthop): Make the field reference unsigned
	when converting a single bit compare.

Thu May 27 03:07:13 1999  Philip Blundell  <pb@nexus.co.uk>

	Based on patch by Scott Bambrough and Pat Beirne:
	* config/arm/arm.c (making_const_table): New variable.
	* config/arm/arm.h (making_const_table): Declare.
	(OUTPUT_INT_ADDR_CONST): Mark symbols as position independent if
	appropriate.
	* config/arm/arm.md (consttable_4, consttable_8, consttable_end):
	Keep track of when we are building the constant table.	

Thu May 27 02:52:55 1999  Jeffrey A Law  (law@cygnus.com)

	* varasm.c (STRIP_NAME_ENCODING): Remove default definition.